# OpenGL_Testing

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Shader.h  main.cpp  vcpkg-configuration.json  vcpkg.json
Docs/: CMakeLists.txt  Doxyfile.in
Engine/: Camera.h  Light.h  Material.h  MatrixStack.h  Shader.h  Shape.h  ShapeFactory.h  Texture.h  VAO.h  VB.h
Resources/Shaders/: Simple.fs  Simple.vs  shader.vert
