FIND_PACKAGE( Doxygen )

IF(DOXYGEN_FOUND)
    MESSAGE(STATUS "Doxygen found: ${DOXYGEN_EXECUTABLE} -- ${DOXYGEN_VERSION}")

	# Set Doxygen input and output files.
	SET(DOXYGEN_PROJECT_NAME ${CMAKE_MAIN_PROJECT})
	SET(DOXYGEN_INPUT_DIR ${PROJECT_SOURCE_DIR}/Engine)
	SET(DOXYGEN_OUTPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/Doxygen)
	SET(DOXYFILE_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
	SET(DOXYFILE_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

	# Generate DoxyFile from the input file.
	CONFIGURE_FILE(${DOXYFILE_IN} ${DOXYFILE_OUT} @ONLY)

	FILE(MAKE_DIRECTORY ${DOXYGEN_OUTPUT_DIR})

	ADD_CUSTOM_TARGET(docs ALL
		COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_OUT}
		COMMENT "Generating Doxygen documentation")
	add_dependencies(ShapesSandbox_Testing docs)
ENDIF()